course eerste semester

--- a/semester1.tex
+++ b/semester1.tex
@@ -12,67 +12,95 @@
 
 \begin{document}
 %	\setcounter{tocdepth}{2}
-    \xmtitle{Natuurkunde 6de jaar doorstroom, eerste semester}{}  
+    \xmtitle{Eerste semester}{}  
  
 
     
 
 \part{Inleiding}
 
-\activitychapter{lambregs_ximera/inleiding.tex}
+\activitychapter{sem1/inleiding.tex}
+
+\part{Vectoren}
+
+\activitychapter{sem1/vct_inleiding.tex}
+\activitychapter{sem1/vct_begrip.tex}
+\activitychapter{sem1/vct_bewerkingen.tex}
+\activitychapter{sem1/vct_oef.tex}
+
+
+
+\part{Basisbegrippen van de kinematica}
+
+\activitychapter{sem1/knmtc_bgrppn_intro.tex}
+\activitychapter{sem1/knmtc_bgrppn_referentiestelsel.tex}
+\activitychapter{sem1/knmtc_bgrppn_positie.tex}
+\activitychapter{sem1/knmtc_bgrppn_snelheid.tex}
+\activitychapter{sem1/knmtc_bgrppn_versnelling.tex}
+\activitychapter{sem1/knmtc_bgrppn_oef.tex}
+
 
 \part{Eendimensionale bewegingen}
 
-\activitychapter{lambregs_ximera/knmtc_1dim_intro.tex}
-\activitychapter{lambregs_ximera/knmtc_1dim_begrippen.tex}
-\activitychapter{lambregs_ximera/knmtc_1dim_ERB.tex}
-\activitychapter{lambregs_ximera/knmtc_1dim_EVRB_rechtstreeks.tex}
-\activitychapter{lambregs_ximera/knmtc_1dim_oplossingsstrategie.tex}
-\activitychapter{lambregs_ximera/knmtc_1dim_verticale_worp.tex}
+\activitychapter{sem1/knmtc_1dim_intro.tex}
+\activitychapter{sem1/knmtc_1dim_begrippen.tex}
+\activitychapter{sem1/knmtc_1dim_ERB.tex}
+\activitychapter{sem1/knmtc_1dim_EVRB_rechtstreeks.tex}
+\activitychapter{sem1/knmtc_1dim_oplossingsstrategie.tex}
+\activitychapter{sem1/knmtc_1dim_verticale_worp.tex}
 
 
 
 \part{Tweedimensionale bewegingen}
 
 
-\activitychapter{lambregs_ximera/knmtc_2dim_intro.tex}
-\activitychapter{lambregs_ximera/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
-\activitychapter{lambregs_ximera/knmtc_2dim_begrippen.tex}
-\activitychapter{lambregs_ximera/knmtc_2dim_eenparige_cirkelbeweging.tex}
-\activitychapter{lambregs_ximera/knmtc_2dim_horizontale_worp.tex}
+\activitychapter{sem1/knmtc_2dim_intro.tex}
+\activitychapter{sem1/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
+\activitychapter{sem1/knmtc_2dim_begrippen.tex}
+\activitychapter{sem1/knmtc_2dim_eenparige_cirkelbeweging.tex}
+\activitychapter{sem1/knmtc_2dim_horizontale_worp.tex}
 
 
 \part{De beginselen van Newton}
 
-\activitychapter{lambregs_ximera/nwtn_intro.tex}
-\activitychapter{lambregs_ximera/nwtn_traagheid.tex}
-\activitychapter{lambregs_ximera/nwtn_tweede_beginsel.tex}
-\activitychapter{lambregs_ximera/nwtn_derde_beginsel.tex}
-\activitychapter{lambregs_ximera/nwtn_oplossingsstrategie.tex}
-\activitychapter{lambregs_ximera/nwtn_historische_uitwijding.tex}
+\activitychapter{sem1/nwtn_intro.tex}
+\activitychapter{sem1/nwtn_traagheid.tex}
+\activitychapter{sem1/nwtn_tweede_beginsel.tex}
+\activitychapter{sem1/nwtn_derde_beginsel.tex}
+\activitychapter{sem1/nwtn_oef.tex}
+% \activitychapter{sem1/nwtn_oplossingsstrategie.tex}
+% \activitychapter{sem1/nwtn_historische_uitwijding.tex}
 
 
-\part{De gravitatiekracht}
+\part{Toepassing wetten van Newton}
 
-\activitychapter{lambregs_ximera/grvt_kepler.tex}
-\activitychapter{lambregs_ximera/grvt_universele_gravitatiekracht.tex}
-\activitychapter{lambregs_ximera/grvt_satellietbanen.tex}
-\activitychapter{lambregs_ximera/grvt_gewicht.tex}
-\activitychapter{lambregs_ximera/grvt_zwaartekracht.tex}
+\activitychapter{sem1/nwtn_toep_algemeen.tex}
+\activitychapter{sem1/nwtn_toep_krachten.tex}
+\activitychapter{sem1/nwtn_toep_dynamica_ECB.tex}
 
 
-\part{Arbeid en Energie}
 
-\activitychapter{lambregs_ximera/ae_intro.tex}
-\activitychapter{lambregs_ximera/ae_constante_kracht.tex}
-\activitychapter{lambregs_ximera/ae_niet_constante_kracht.tex}
-\activitychapter{lambregs_ximera/ae_theorema.tex}
-\activitychapter{lambregs_ximera/ae_pot_elastische.tex}
-\activitychapter{lambregs_ximera/ae_pot_gravitationele.tex}
-\activitychapter{lambregs_ximera/ae_pot_gravitationele_algemeen.tex}
-\activitychapter{lambregs_ximera/ae_pot_referentiepunt.tex}
-\activitychapter{lambregs_ximera/ae_pot_potentiele_energie.tex}
-\activitychapter{lambregs_ximera/ae_behoud.tex}
+
+% \part{De gravitatiekracht}
+
+% \activitychapter{sem1/grvt_kepler.tex}
+% \activitychapter{sem1/grvt_universele_gravitatiekracht.tex}
+% \activitychapter{sem1/grvt_satellietbanen.tex}
+% \activitychapter{sem1/grvt_gewicht.tex}
+% \activitychapter{sem1/grvt_zwaartekracht.tex}
+
+% \part{Arbeid en Energie}
+
+% \activitychapter{sem1/ae_intro.tex}
+% \activitychapter{sem1/ae_constante_kracht.tex}
+% \activitychapter{sem1/ae_niet_constante_kracht.tex}
+% \activitychapter{sem1/ae_theorema.tex}
+% \activitychapter{sem1/ae_pot_elastische.tex}
+% \activitychapter{sem1/ae_pot_gravitationele.tex}
+% \activitychapter{sem1/ae_pot_gravitationele_algemeen.tex}
+% \activitychapter{sem1/ae_pot_referentiepunt.tex}
+% \activitychapter{sem1/ae_pot_potentiele_energie.tex}
+% \activitychapter{sem1/ae_behoud.tex}
 
 
 
