--- a/semester1.tex
+++ b/semester1.tex
@@ -19,88 +19,89 @@
 
 \part{Inleiding}
 
-\activitychapter{sem1/inleiding.tex}
+\activitychapter{6dejaar/inleiding.tex}
 
 \part{Vectoren}
 
-\activitychapter{sem1/vct_inleiding.tex}
-\activitychapter{sem1/vct_begrip.tex}
-\activitychapter{sem1/vct_bewerkingen.tex}
-\activitychapter{sem1/vct_oef.tex}
+\activitychapter{6dejaar/vectoren/vct_inleiding.tex}
+\activitychapter{6dejaar/vectoren/vct_begrip.tex}
+\activitychapter{6dejaar/vectoren/vct_bewerkingen.tex}
+\activitychapter{6dejaar/vectoren/vct_oef.tex}
 
 
 
 \part{Basisbegrippen van de kinematica}
 
-\activitychapter{sem1/knmtc_bgrppn_intro.tex}
-\activitychapter{sem1/knmtc_bgrppn_referentiestelsel.tex}
-\activitychapter{sem1/knmtc_bgrppn_positie.tex}
-\activitychapter{sem1/knmtc_bgrppn_snelheid.tex}
-\activitychapter{sem1/knmtc_bgrppn_versnelling.tex}
-\activitychapter{sem1/knmtc_bgrppn_oef.tex}
+\activitychapter{6dejaar/kinematica/knmtc_bgrppn_intro.tex}
+\activitychapter{6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex}
+\activitychapter{6dejaar/kinematica/knmtc_bgrppn_positie.tex}
+\activitychapter{6dejaar/kinematica/knmtc_bgrppn_snelheid.tex}
+\activitychapter{6dejaar/kinematica/knmtc_bgrppn_versnelling.tex}
+\activitychapter{6dejaar/kinematica/knmtc_bgrppn_oef.tex}
 
 
 \part{Eendimensionale bewegingen}
 
-\activitychapter{sem1/knmtc_1dim_intro.tex}
-\activitychapter{sem1/knmtc_1dim_begrippen.tex}
-\activitychapter{sem1/knmtc_1dim_ERB.tex}
-\activitychapter{sem1/knmtc_1dim_EVRB_rechtstreeks.tex}
-\activitychapter{sem1/knmtc_1dim_oplossingsstrategie.tex}
-\activitychapter{sem1/knmtc_1dim_verticale_worp.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_intro.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_begrippen.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_ERB.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_EVRB_rechtstreeks.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_oplossingsstrategie.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_verticale_worp.tex}
 
 
 
 \part{Tweedimensionale bewegingen}
 
 
-\activitychapter{sem1/knmtc_2dim_intro.tex}
-\activitychapter{sem1/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
-\activitychapter{sem1/knmtc_2dim_begrippen.tex}
-\activitychapter{sem1/knmtc_2dim_eenparige_cirkelbeweging.tex}
-\activitychapter{sem1/knmtc_2dim_horizontale_worp.tex}
+\activitychapter{6dejaar/kinematica/knmtc_2dim_intro.tex}
+\activitychapter{6dejaar/kinematica/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
+\activitychapter{6dejaar/kinematica/knmtc_2dim_begrippen.tex}
+\activitychapter{6dejaar/kinematica/knmtc_2dim_eenparige_cirkelbeweging.tex}
+\activitychapter{6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex}
 
 
 \part{De beginselen van Newton}
 
-\activitychapter{sem1/nwtn_intro.tex}
-\activitychapter{sem1/nwtn_traagheid.tex}
-\activitychapter{sem1/nwtn_tweede_beginsel.tex}
-\activitychapter{sem1/nwtn_derde_beginsel.tex}
-\activitychapter{sem1/nwtn_oef.tex}
-% \activitychapter{sem1/nwtn_oplossingsstrategie.tex}
-% \activitychapter{sem1/nwtn_historische_uitwijding.tex}
+\activitychapter{6dejaar/dynamica/nwtn_intro.tex}
+\activitychapter{6dejaar/dynamica/nwtn_traagheid.tex}
+\activitychapter{6dejaar/dynamica/nwtn_tweede_beginsel.tex}
+\activitychapter{6dejaar/dynamica/nwtn_derde_beginsel.tex}
+\activitychapter{6dejaar/dynamica/nwtn_oef.tex}
+% \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
+% \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
 
 \part{Toepassing wetten van Newton}
 
-\activitychapter{sem1/nwtn_toep_algemeen.tex}
-\activitychapter{sem1/nwtn_toep_krachten.tex}
-\activitychapter{sem1/nwtn_toep_dynamica_ECB.tex}
+\activitychapter{6dejaar/dynamica/nwtn_toep_intro.tex}
+\activitychapter{6dejaar/dynamica/nwtn_toep_algemeen.tex}
+\activitychapter{6dejaar/dynamica/nwtn_toep_krachten.tex}
+\activitychapter{6dejaar/dynamica/nwtn_toep_dynamica_ECB.tex}
 
 
 
 
 % \part{De gravitatiekracht}
 
-% \activitychapter{sem1/grvt_kepler.tex}
-% \activitychapter{sem1/grvt_universele_gravitatiekracht.tex}
-% \activitychapter{sem1/grvt_satellietbanen.tex}
-% \activitychapter{sem1/grvt_gewicht.tex}
-% \activitychapter{sem1/grvt_zwaartekracht.tex}
+% \activitychapter{6dejaar/grvt_kepler.tex}
+% \activitychapter{6dejaar/grvt_universele_gravitatiekracht.tex}
+% \activitychapter{6dejaar/grvt_satellietbanen.tex}
+% \activitychapter{6dejaar/grvt_gewicht.tex}
+% \activitychapter{6dejaar/grvt_zwaartekracht.tex}
 
 % \part{Arbeid en Energie}
 
-% \activitychapter{sem1/ae_intro.tex}
-% \activitychapter{sem1/ae_constante_kracht.tex}
-% \activitychapter{sem1/ae_niet_constante_kracht.tex}
-% \activitychapter{sem1/ae_theorema.tex}
-% \activitychapter{sem1/ae_pot_elastische.tex}
-% \activitychapter{sem1/ae_pot_gravitationele.tex}
-% \activitychapter{sem1/ae_pot_gravitationele_algemeen.tex}
-% \activitychapter{sem1/ae_pot_referentiepunt.tex}
-% \activitychapter{sem1/ae_pot_potentiele_energie.tex}
-% \activitychapter{sem1/ae_behoud.tex}
+% \activitychapter{6dejaar/ae_intro.tex}
+% \activitychapter{6dejaar/ae_constante_kracht.tex}
+% \activitychapter{6dejaar/ae_niet_constante_kracht.tex}
+% \activitychapter{6dejaar/ae_theorema.tex}
+% \activitychapter{6dejaar/ae_pot_elastische.tex}
+% \activitychapter{6dejaar/ae_pot_gravitationele.tex}
+% \activitychapter{6dejaar/ae_pot_gravitationele_algemeen.tex}
+% \activitychapter{6dejaar/ae_pot_referentiepunt.tex}
+% \activitychapter{6dejaar/ae_pot_potentiele_energie.tex}
+% \activitychapter{6dejaar/ae_behoud.tex}
 
 
 
