restore (test committed!)

--- a/6dejaar/kinematica/knmtc_2dim_begrippen.tex
+++ b/6dejaar/kinematica/knmtc_2dim_begrippen.tex
@@ -26,12 +26,6 @@
 	is nu immers ook een vector die naast de afstand in vogelvlucht tussen twee punten, ook ge\"oriënteerd is. Het is natuurlijk belangrijk in welke richting die afstand wordt afgelegd.
 	\begin{image}
 	
-
-
-\begin{question} \end{question}
-\begin{question} \end{question}
-\begin{question} \end{question}
-
 	\includegraphics[width=0.4\textwidth]{plaatsvector}
 	\includegraphics[width=0.4\textwidth]{afgelegdeweg_verplaatsing}
 	\end{image}
@@ -47,18 +41,18 @@
 	%\includegraphics[width=0.34\textwidth]{snelheidsvector}
 	%\end{wrapfigure}
 	Analoog aan de snelheid in één dimensie, kunnen we in meerdere dimensies de snelheid definiëren als de afgeleide -- nu van de plaatsvector. De snelheid is dan opnieuw een vector:\footnote{De definitie van een afgeleide van een vector is evenzeer met een limiet. We maken gebruik van de uitdrukkingen $\vec{r}(t+\Delta t)=x(t+\Delta t)\vec{e}_x+y(t+\Delta t)\vec{e}_y$ en $\vec{r}(t)=x(t)\vec{e}_x+y(t)\vec{e}_y$.\begin{eqnarray*}
-	\vec{v}={d\vec{r}}{dt}&=&\lim_{\Delta t\to 0}{\vec{r}(t+\Delta t)-\vec{r}(t)}{\Delta t}\\
-	&=&\lim_{\Delta t\to 0}{[x(t+\Delta t)\vec{e}_x+y(t+\Delta t)\vec{e}_y]-[x(t)\vec{e}_x+y(t)\vec{e}_y]}{\Delta t}\\
-	&=&\lim_{\Delta t\to 0}{[x(t+\Delta t)-x(t)]\vec{e}_x+[y(t+\Delta t)-y(t)]\vec{e}_y}{\Delta t}\\
-	&=&\lim_{\Delta t\to 0}\left({x(t+\Delta t)-x(t)}{\Delta t}\right)\vec{e}_x+\lim_{\Delta t\to 0}\left({y(t+\Delta t)-y(t)}{\Delta t}\right)\vec{e}_y\\
-	&=&{dx}{dt}\vec{e}_x+{dy}{dt}\vec{e}_y%\\&=&v_x\vec{e}_x+v_y\vec{e}_y
+	\vec{v}=\frac{d\vec{r}}{dt}&=&\lim_{\Delta t\to 0}\frac{\vec{r}(t+\Delta t)-\vec{r}(t)}{\Delta t}\\
+	&=&\lim_{\Delta t\to 0}\frac{[x(t+\Delta t)\vec{e}_x+y(t+\Delta t)\vec{e}_y]-[x(t)\vec{e}_x+y(t)\vec{e}_y]}{\Delta t}\\
+	&=&\lim_{\Delta t\to 0}\frac{[x(t+\Delta t)-x(t)]\vec{e}_x+[y(t+\Delta t)-y(t)]\vec{e}_y}{\Delta t}\\
+	&=&\lim_{\Delta t\to 0}\left(\frac{x(t+\Delta t)-x(t)}{\Delta t}\right)\vec{e}_x+\lim_{\Delta t\to 0}\left(\frac{y(t+\Delta t)-y(t)}{\Delta t}\right)\vec{e}_y\\
+	&=&\frac{dx}{dt}\vec{e}_x+\frac{dy}{dt}\vec{e}_y%\\&=&v_x\vec{e}_x+v_y\vec{e}_y
 	\end{eqnarray*}}
 	\begin{eqnarray*}
-	\vec{v}={d\vec{r}}{dt}={d}{dt}\left(x\cdot\vec{e}_x+y\cdot\vec{e}_y\right)={dx}{dt}\vec{e}_x+{dy}{dt}\vec{e}_y%=v_x\vec{e}_x+v_y\vec{e}_y
+	\vec{v}=\frac{d\vec{r}}{dt}=\frac{d}{dt}\left(x\cdot\vec{e}_x+y\cdot\vec{e}_y\right)=\frac{dx}{dt}\vec{e}_x+\frac{dy}{dt}\vec{e}_y%=v_x\vec{e}_x+v_y\vec{e}_y
 	\end{eqnarray*}
 	De eenheidsvectoren $\vec{e}_x$ en $\vec{e}_y$ veranderen niet in de tijd zodat we die buiten de afgeleide hebben kunnen brengen. We zien dat de snelheidsvector dus te ontbinden is in componenten waarbij de componenten gewoonweg de snelheden van de afzonderlijke coördinaten zijn. 
 	\begin{eqnarray*}
-	\vec{v}=v_x\vec{e}_x+v_y\vec{e}_y\quad\mathrm{met}\quad v_x={dx}{dt},\,v_y={dy}{dt}
+	\vec{v}=v_x\vec{e}_x+v_y\vec{e}_y\quad\mathrm{met}\quad v_x=\frac{dx}{dt},\,v_y=\frac{dy}{dt}
 	\end{eqnarray*}
 	
 	%\begin{image}
@@ -83,16 +77,16 @@
 	\begin{proof}
 	We kunnen dit bewijzen met de kettingregel, toegepast op de functie $y(t)=y(x(t))$.
 	\begin{eqnarray*}
-	 {dy}{dt}={dy}{dx}{dx}{dt}\Leftrightarrow{dy}{dx}={{dy}{dt}}{{dx}{dt}}={v_y}{v_x}
+	 \frac{dy}{dt}=\frac{dy}{dx}\frac{dx}{dt}\Leftrightarrow\frac{dy}{dx}=\frac{\frac{dy}{dt}}{\frac{dx}{dt}}=\frac{v_y}{v_x}
 	\end{eqnarray*}
-	Inderdaad, ${dy}{dx}$ is de helling van de baan en deze valt samen met de helling die de snelheidsvector maakt ${v_y}{v_x}$.
+	Inderdaad, $\frac{dy}{dx}$ is de helling van de baan en deze valt samen met de helling die de snelheidsvector maakt $\frac{v_y}{v_x}$.
 	\end{proof}
 	
 	\subsection{Versnelling}
 	
 	Ook de versnelling definieren we analoog; als afgeleide van de snelheid.
 	\begin{eqnarray*}
-	\vec{a}={d\vec{v}}{dt}={dv_x}{dt}\vec{e}_x+{dv_y}{dt}\vec{e}_y=a_x\vec{e}_x+a_y\vec{e}_y
+	\vec{a}=\frac{d\vec{v}}{dt}=\frac{dv_x}{dt}\vec{e}_x+\frac{dv_y}{dt}\vec{e}_y=a_x\vec{e}_x+a_y\vec{e}_y
 	\end{eqnarray*}
 	Merk op dat er een versnelling kan zijn wanneer de snelheidsvector van grootte verandert maar \'o\'ok wanneer de snelheidsvector van richting verandert! Als de snelheidsvector immers van richting verandert, veranderen zijn coördinaten $v_x$ en/of $v_y$. Merk bovendien op dat de versnelling niet noodzakelijk samen hoeft te vallen met de baan \ldots
 	\begin{image}
@@ -120,15 +114,15 @@
 	\begin{enumerate}
 	\item We moeten dus de baanvergelijking geven. Dit doen we door de tijd uit te drukken i.f.v. de positie $x$ en dit te substitueren in de coördinaatvergelijking $y(t)$.
 	\begin{eqnarray*}
-	x&=&bt\Leftrightarrow t={x}{b}\\
+	x&=&bt\Leftrightarrow t=\frac{x}{b}\\
 	&\Downarrow&\\
-	y&=&c-dt^2=c-{d}{b^2}x^2
+	y&=&c-dt^2=c-\frac{d}{b^2}x^2
 	\end{eqnarray*}
 	Dit is een bergparabool met top $(0,c)=(0,5,00\rm\,m)$
 	\item De componenten van de snelheid zijn:
 	\begin{eqnarray*}
-	v_x&=&{dx}{dt}=b\\
-	v_y&=&{dy}{dt}=-2dt
+	v_x&=&\frac{dx}{dt}=b\\
+	v_y&=&\frac{dy}{dt}=-2dt
 	\end{eqnarray*}
 	zodat de snelheid(svector) wordt gegeven door
 	\begin{eqnarray*}
@@ -139,11 +133,11 @@
 	\begin{eqnarray*}
 	rc_{r}\cdot rc_{v}&=&-1\\
 	&\Updownarrow&\\
-	{y}{x}\cdot{v_y}{v_x}&=&-1\\
+	\frac{y}{x}\cdot\frac{v_y}{v_x}&=&-1\\
 	&\Downarrow&\\
-	{c-dt^2}{bt}\cdot{-2dt}{b}&=&-1\\
+	\frac{c-dt^2}{bt}\cdot\frac{-2dt}{b}&=&-1\\
 	&\Downarrow&(t>0)\\
-	t&=&\sqrt{{2cd-b^2}{2d^2}}\\
+	t&=&\sqrt{\frac{2cd-b^2}{2d^2}}\\
 	&=&1,73\rm\,s
 	\end{eqnarray*}
 	\end{enumerate}}
