--- a/semester1_test_bart.tex
+++ b/semester1_test_bart.tex
@@ -63,10 +63,10 @@
 
 \part{De beginselen van Newton}
 
-\activitychapter{6dejaar/dynamica/nwtn_intro.tex}
-\activitychapter{6dejaar/dynamica/nwtn_traagheid.tex}
-\activitychapter{6dejaar/dynamica/nwtn_tweede_beginsel.tex}
-\activitychapter{6dejaar/dynamica/nwtn_derde_beginsel.tex}
+% \activitychapter{6dejaar/dynamica/nwtn_intro.tex}
+% \activitychapter{6dejaar/dynamica/nwtn_traagheid.tex}
+% \activitychapter{6dejaar/dynamica/nwtn_tweede_beginsel.tex}
+\activitychapter{6dejaar/dynamica/nwtnDerdeBeginsel.tex}
 %\activitychapter{6dejaar/dynamica/nwtn_oef.tex}
 
 % \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
