snelle eerste aanpassing van tekst als test

--- a/6dejaar/dynamica/nwtn_derde_beginsel.tex
+++ b/6dejaar/dynamica/nwtn_derde_beginsel.tex
@@ -23,23 +23,45 @@
 	\includegraphics[width=0.44\textwidth]{Newtons_cradle_animation_book}
 	% \end{wrapfigure}
 	\end{image}
-	\captionof{figure}{Een fascinerend speeltje}
-
-	Een ander voorbeeld waarin lichamen krachten op mekaar uitoefenen is zo'n decoratief speeltje waar opgehangen metalen bolletjes op een fascinerende manier al botsend heen en weer slingeren. Een bolletje dat met een snelheid aangeslingerd komt, wordt tot stilstand gebracht terwijl een ander bolletje vanuit stilstand tot dezelfde snelheid wordt gelanceerd. Omdat de massa's van de kogeltjes even groot zijn en de versnelling van de ene even groot is als de vertraging van de andere, moeten de kogeltjes op elkaar even grote krachten uitoefenen. De derde wet van Newton -- ook wel de wet van actie en reactie genoemd -- \textit{poneert} dat de krachten die lichamen wederzijds uitoefenen \textit{altijd} even groot zijn.
+	\captionof{figure}{Een fascinerend speeltje} 
+	
+	De derde wet van Newton -- ook wel de wet van actie en reactie genoemd -- \textit{poneert} dat de krachten die lichamen wederzijds uitoefenen \textit{altijd} even groot zijn.
 	%%%\newline
 	\begin{definition}
 	{\textbf{De wet van actie en reactie}}
 	%%%\newline
 	%%%\newline
-	Wanneer lichaam A op lichaam B een kracht uitoefent, oefent lichaam B op lichaam A een even grote maar tegengestelde kracht uit.
+	Wanneer lichaam A op lichaam B een kracht uitoefent, oefent lichaam B op lichaam A een even grote maar tegengestelde kracht uit. In symbolen:
 	\begin{eqnarray*}
 	\vec{F}_{a,b}=-\vec{F}_{b,a}
 	\end{eqnarray*}
 	\end{definition}
+
+
+	Opmerkingen % In juiste format te gieten
 	
-	Met deze derde wet kunnen we verschillende verschijnselen verklaren. Zo is de wet van actie en reactie van toepassing op wandelen. Wij kunnen vanuit rust in beweging komen door ons af te zetten. Wij oefenen een kracht op de grond uit waarbij deze laatste op zijn beurt een even grote en tegengestelde kracht op ons uitoefent. Zo krijgen wij een versnelling. Een vliegtuig met straalmotoren of een raket doen hetzelfde. Door het uitoefenen van een kracht op de naar achter uitgeworpen gassen, oefenen de uitgeworpen gassen een kracht uit op het vliegtuig of de raket. Maar dan voorwaarts. (Een vliegtuig of raket duwt zich dus niet af tegen de (eventuele) lucht.)
+	\begin{enumerate}
+		\item van het ene lichaam op het andere en van het andere op het ene	
+		\item Even grote krachten
+		\item tegengesteld
+		\item op elk moment, zonder vertraging
+	\end{enumerate}
+	
+	Met deze derde wet kunnen we verschillende verschijnselen verklaren. 
+	
+	Hier komen verschillende voorbeelden.
+	
+	Zo is de wet van actie en reactie van toepassing op wandelen. Wij kunnen vanuit rust in beweging komen door ons af te zetten. Wij oefenen een kracht op de grond uit waarbij deze laatste op zijn beurt een even grote en tegengestelde kracht op ons uitoefent. Zo krijgen wij een versnelling. 
+	
+	Een vliegtuig met straalmotoren of een raket doen hetzelfde. Door het uitoefenen van een kracht op de naar achter uitgeworpen gassen, oefenen de uitgeworpen gassen een kracht uit op het vliegtuig of de raket. Maar dan voorwaarts. (Een vliegtuig of raket duwt zich dus niet af tegen de (eventuele) lucht.)
 	
 	Het even groot zijn van die krachten is misschien opmerkelijk. Het is toch de appel die naar de aarde valt en niet andersom?! Of, als de kracht die de aarde op de appel uitoefent even groot is als die de appel op de aarde uitoefent, waarom gaan ze dan niet naar mekaar toe? Het antwoord is dat de \emph{uitwerking} van een kracht niet hetzelfde is als de kracht zelf. De massa van de aarde is gigantisch veel groter dan die van de appel zodat die, volgens de tweede wet van Newton, een veel kleinere versnelling krijgt. En het is de versnelling die we zien, niet de kracht.
 	
 	
 \end{document}
+
+
+
+
+
+% Een ander voorbeeld waarin lichamen krachten op mekaar uitoefenen is zo'n decoratief speeltje waar opgehangen metalen bolletjes op een fascinerende manier al botsend heen en weer slingeren. Een bolletje dat met een snelheid aangeslingerd komt, wordt tot stilstand gebracht terwijl een ander bolletje vanuit stilstand tot dezelfde snelheid wordt gelanceerd. Omdat de massa's van de kogeltjes even groot zijn en de versnelling van de ene even groot is als de vertraging van de andere, moeten de kogeltjes op elkaar even grote krachten uitoefenen.
