--- a/6dejaar/dynamica/nwtn_derde_beginsel.tex
+++ b/6dejaar/dynamica/nwtn_derde_beginsel.tex
@@ -8,27 +8,27 @@
 	\xmtitle{Derde beginsel van Newton: actie-reactie}{}
     \xmsource\xmuitleg
 
-	% %%%\section{Het derde beginsel van Newton}
+\begin{enumerate}
+\item Welke oorzaak hebben krachten? Altijd \emph{door} een ander voorwerp uitgeoefend. 
+\item De ene oefent de kracht uit, de andere ondergaat de kracht. Maar, het is \emph{niet zo eenzijdig}.
+\item En wat is dan de relatie tussen die krachten \ldots?
+\item[vb] Vingers in de tegennatuurlijke richting plooien en tegen een star object duwen, zoals een bank. Je vingers plooien verder dan dat je ze zelf kan brengen, zodat er een externe kracht moet op inwerken.
+\end{enumerate}	
+
 
 	Meestal plooien we onze vingers naar onze handpalm toe. De praktijk leert ons dat het andersom toch iets moeilijker gaat. Misschien vandaar. Als je echter met je andere hand wat helpt en duwt -- een kracht uitoefent -- plooien je vingers al iets verder naar achter. Uit zichzelf geraken ze niet zo ver. Als je nu -- ter vergelijking -- met gestrekte vingers tegen de tafel duwt, plooien je vingers eveneens meer naar achteren dan dat ze uit zichzelf zouden kunnen. Je moet concluderen dat naast het feit dat je een kracht op de tafel uitoefent\footnote{Misschien nu met weinig beweging tot gevolg.} de tafel op zijn beurt een kracht op je vingers uitoefent. Zonder extern inwerkende kracht zouden je vingers immers niet zo ver kunnen doorbuigen.
-	%\begin{image}
-	%\begin{center}
-	%\includegraphics[width=.45\textwidth]{Newtons_cradle_animation_book}
-	%\captionof{figure}{Een fascinerend speeltje}
-	%\end{center}
-	%\end{image}
 
-	\begin{image}
-	% \begin{wrapfigure}{R}{0.5\textwidth}	
-	\includegraphics[width=0.44\textwidth]{Newtons_cradle_animation_book}
-	% \end{wrapfigure}
-	\end{image}
-	\captionof{figure}{Een fascinerend speeltje} 
+	% \begin{image}
+	% % \begin{wrapfigure}{R}{0.5\textwidth}	
+	% \includegraphics[width=0.44\textwidth]{Newtons_cradle_animation_book}
+	% % \end{wrapfigure}
+	% \end{image}
+	% \captionof{figure}{Een fascinerend speeltje} 
 	
 	De derde wet van Newton -- ook wel de wet van actie en reactie genoemd -- \textit{poneert} dat de krachten die lichamen wederzijds uitoefenen \textit{altijd} even groot zijn.
 	%%%\newline
 	\begin{definition}
-	{\textbf{De wet van actie en reactie}}
+	{\textbf{(De wet van actie en reactie)}}
 	%%%\newline
 	%%%\newline
 	Wanneer lichaam A op lichaam B een kracht uitoefent, oefent lichaam B op lichaam A een even grote maar tegengestelde kracht uit. In symbolen:
@@ -38,26 +38,50 @@
 	\end{definition}
 
 
-	Opmerkingen % In juiste format te gieten
+	% Opmerkingen % In juiste format te gieten
+
+\begin{remark}\nl
+	van het ene lichaam op het andere en van het andere op het ene	
+
+	> vb boer Teun en zijn ezel Donky
+\end{remark}
+
+\begin{remark}\nl
+	Even grote krachten
+
+	Het even groot zijn van die krachten is misschien opmerkelijk. Het is toch de appel die naar de aarde valt en niet andersom?! Of, als de kracht die de aarde op de appel uitoefent even groot is als die de appel op de aarde uitoefent, waarom gaan ze dan niet naar mekaar toe? Het antwoord is dat de \emph{uitwerking} van een kracht niet hetzelfde is als de kracht zelf. De massa van de aarde is gigantisch veel groter dan die van de appel zodat die, volgens de tweede wet van Newton, een veel kleinere versnelling krijgt. En het is de versnelling die we zien, niet de kracht.
+\end{remark}
+
+\begin{remark}\nl
+	tegengesteld
+\end{remark}
+
+\begin{remark}\nl
+	op elk moment, zonder vertraging
+\end{remark}
 	
-	\begin{enumerate}
-		\item van het ene lichaam op het andere en van het andere op het ene	
-		\item Even grote krachten
-		\item tegengesteld
-		\item op elk moment, zonder vertraging
-	\end{enumerate}
+	% \begin{enumerate}
+	% 	\item van het ene lichaam op het andere en van het andere op het ene	
+	% 	\item Even grote krachten
+	% 	\item tegengesteld
+	% 	\item op elk moment, zonder vertraging
+	% \end{enumerate}
 	
-	Met deze derde wet kunnen we verschillende verschijnselen verklaren. 
-	
-	Hier komen verschillende voorbeelden.
+	Met deze derde wet kunnen we verschillende verschijnselen verklaren. Hier volgen enkele voorbeelden.
+
+%\begin{basicSkip}
+\begin{example}[hier kan een titel, die tussen haakjes komt en grijs is?] \nl
 	
 	Zo is de wet van actie en reactie van toepassing op wandelen. Wij kunnen vanuit rust in beweging komen door ons af te zetten. Wij oefenen een kracht op de grond uit waarbij deze laatste op zijn beurt een even grote en tegengestelde kracht op ons uitoefent. Zo krijgen wij een versnelling. 
-	
+
+\end{example}
+
+\begin{example}
 	Een vliegtuig met straalmotoren of een raket doen hetzelfde. Door het uitoefenen van een kracht op de naar achter uitgeworpen gassen, oefenen de uitgeworpen gassen een kracht uit op het vliegtuig of de raket. Maar dan voorwaarts. (Een vliegtuig of raket duwt zich dus niet af tegen de (eventuele) lucht.)
-	
-	Het even groot zijn van die krachten is misschien opmerkelijk. Het is toch de appel die naar de aarde valt en niet andersom?! Of, als de kracht die de aarde op de appel uitoefent even groot is als die de appel op de aarde uitoefent, waarom gaan ze dan niet naar mekaar toe? Het antwoord is dat de \emph{uitwerking} van een kracht niet hetzelfde is als de kracht zelf. De massa van de aarde is gigantisch veel groter dan die van de appel zodat die, volgens de tweede wet van Newton, een veel kleinere versnelling krijgt. En het is de versnelling die we zien, niet de kracht.
-	
-	
+\end{example}
+
+
+
 \end{document}
 
 
