--- a/6dejaar/dynamica/nwtn_derde_beginsel.tex
+++ b/6dejaar/dynamica/nwtn_derde_beginsel.tex
@@ -5,87 +5,100 @@
 
 \begin{document}
 	\author{Bart Lambregs}
-	\xmtitle{Derde beginsel van Newton: actie-reactie}{}
+	\xmtitle{De derde wet van Newton}{}
     \xmsource\xmuitleg
 
-\begin{enumerate}
-\item Welke oorzaak hebben krachten? Altijd \emph{door} een ander voorwerp uitgeoefend. 
-\item De ene oefent de kracht uit, de andere ondergaat de kracht. Maar, het is \emph{niet zo eenzijdig}.
-\item En wat is dan de relatie tussen die krachten \ldots?
-\item[vb] Vingers in de tegennatuurlijke richting plooien en tegen een star object duwen, zoals een bank. Je vingers plooien verder dan dat je ze zelf kan brengen, zodat er een externe kracht moet op inwerken.
-\end{enumerate}	
+Krachten komen niet uit het niets, ze worden altijd door een ander voorwerp uitgeoefend. Zo is het de hamer die de spijker in de muur drijft en is het de voet die een trap tegen de bal geeft. In deze voorbeelden oefent het ene voorwerp een kracht uit en ondergaat het andere voorwerp die kracht. Maar, is het zo eenzijdig \ldots? Het volgende voorbeeld geeft aan van niet. Het geeft aan dat er naast een `actie'kracht ook altijd een `reactie'kracht optreedt.
 
+\begin{example}
+	Meestal plooien vingers naar de handpalm toe. De praktijk leert dat het andersom toch iets moeilijker gaat, misschien vandaar. Als de andere hand echter wat helpt door te duwen (dus een kracht uitoefent op de vingers), plooien de vingers al iets verder naar achter; uit zichzelf geraken ze niet zo ver. Als je nu -- ter vergelijking -- met gestrekte vingers tegen de tafel duwt, plooien je vingers eveneens meer naar achteren dan dat ze uit zichzelf zouden kunnen. Omdat de vingers zonder een extern uitgeoefende kracht niet zo ver kunnen doorbuigen, valt te concluderen dat naast de kracht die door de vingers op de tafel wordt uitgeoefend, de tafel op zijn beurt een kracht uitoefent op de vingers.
+\end{example}
 
-	Meestal plooien we onze vingers naar onze handpalm toe. De praktijk leert ons dat het andersom toch iets moeilijker gaat. Misschien vandaar. Als je echter met je andere hand wat helpt en duwt -- een kracht uitoefent -- plooien je vingers al iets verder naar achter. Uit zichzelf geraken ze niet zo ver. Als je nu -- ter vergelijking -- met gestrekte vingers tegen de tafel duwt, plooien je vingers eveneens meer naar achteren dan dat ze uit zichzelf zouden kunnen. Je moet concluderen dat naast het feit dat je een kracht op de tafel uitoefent\footnote{Misschien nu met weinig beweging tot gevolg.} de tafel op zijn beurt een kracht op je vingers uitoefent. Zonder extern inwerkende kracht zouden je vingers immers niet zo ver kunnen doorbuigen.
-
-	% \begin{image}
-	% % \begin{wrapfigure}{R}{0.5\textwidth}	
-	% \includegraphics[width=0.44\textwidth]{Newtons_cradle_animation_book}
-	% % \end{wrapfigure}
-	% \end{image}
-	% \captionof{figure}{Een fascinerend speeltje} 
+% \begin{image}
+% % \begin{wrapfigure}{R}{0.5\textwidth}	
+% \includegraphics[width=0.44\textwidth]{Newtons_cradle_animation_book}
+% % \end{wrapfigure}
+% \end{image}
+% \captionof{figure}{Een fascinerend speeltje} 
 	
-	De derde wet van Newton -- ook wel de wet van actie en reactie genoemd -- \textit{poneert} dat de krachten die lichamen wederzijds uitoefenen \textit{altijd} even groot zijn.
-	%%%\newline
-	\begin{definition}
-	{\textbf{(De wet van actie en reactie)}}
-	%%%\newline
-	%%%\newline
-	Wanneer lichaam A op lichaam B een kracht uitoefent, oefent lichaam B op lichaam A een even grote maar tegengestelde kracht uit. In symbolen:
-	\begin{eqnarray*}
+De derde bewegingswet van Newton -- ook wel de wet van actie en reactie genoemd -- geeft de relatie tussen de krachten die lichamen onderling op elkaar uitoefenen.
+
+\begin{definition}[De wet van actie en reactie]\nl
+Wanneer lichaam A op lichaam B een kracht uitoefent, oefent lichaam B op lichaam A een even grote maar tegengestelde kracht uit. In symbolen:
+\begin{equation*}
 	\vec{F}_{a,b}=-\vec{F}_{b,a}
-	\end{eqnarray*}
-	\end{definition}
+\end{equation*}
+\end{definition}
 
-
-	% Opmerkingen % In juiste format te gieten
-
-\begin{remark}\nl
-	van het ene lichaam op het andere en van het andere op het ene	
-
-	> vb boer Teun en zijn ezel Donky
-\end{remark}
-
-\begin{remark}\nl
-	Even grote krachten
-
+\begin{expandable}{remark}{De actie- en reactiekracht zijn altijd even groot.}
 	Het even groot zijn van die krachten is misschien opmerkelijk. Het is toch de appel die naar de aarde valt en niet andersom?! Of, als de kracht die de aarde op de appel uitoefent even groot is als die de appel op de aarde uitoefent, waarom gaan ze dan niet naar mekaar toe? Het antwoord is dat de \emph{uitwerking} van een kracht niet hetzelfde is als de kracht zelf. De massa van de aarde is gigantisch veel groter dan die van de appel zodat die, volgens de tweede wet van Newton, een veel kleinere versnelling krijgt. En het is de versnelling die we zien, niet de kracht.
-\end{remark}
+\end{expandable}
 
-\begin{remark}\nl
-	tegengesteld
-\end{remark}
+\begin{expandable}{remark}{Van het krachtenpaar grijpen de krachten op verschillende lichamen aan.}
+	Er is altijd een voorwerp \emph{waardoor} de kracht wordt uitgeoefend en een voorwerp \emph{waarop} de kracht wordt uitgeoefend.
 
-\begin{remark}\nl
-	op elk moment, zonder vertraging
-\end{remark}
-	
-	% \begin{enumerate}
-	% 	\item van het ene lichaam op het andere en van het andere op het ene	
-	% 	\item Even grote krachten
-	% 	\item tegengesteld
-	% 	\item op elk moment, zonder vertraging
-	% \end{enumerate}
-	
-	Met deze derde wet kunnen we verschillende verschijnselen verklaren. Hier volgen enkele voorbeelden.
+	\begin{denkvraag*}{}%{Boer Teun en zijn ezel Donkey}
+		De ezel van boer Teun, Donkey, wil de kar met waar voor de markt niet trekken. Hij maakt namelijk de volgende redenering: `Voor elke poging die ik doe om de wagen vooruit te trekken, oefent de kar een even grote maar achterwaartse kracht uit. De nettokracht zal dan ook onvermijdelijk altijd nul zijn, zodat ik niet in beweging zal geraken. Ik doe geen moeite.'
 
-%\begin{basicSkip}
-\begin{example}[hier kan een titel, die tussen haakjes komt en grijs is?] \nl
-	
+		Waar loopt de redenering van de ezel mis?
+	\end{denkvraag*}
+
+\end{expandable}
+
+\begin{expandable}{remark}{Actie- en reactiekracht zijn niet eenduidig.}
+	Omdat de twee krachten van het krachtenpaar tegelijk optreden, is het in feite niet mogelijk aan te geven wie nu de actiekracht en wie de reactiekracht is.
+\end{expandable}
+
+Met deze derde wet kunnen we verschillende verschijnselen verklaren. Hier volgen enkele voorbeelden.
+
+\begin{example}[Hoe kunnen we eigenlijk lopen?] \nl
 	Zo is de wet van actie en reactie van toepassing op wandelen. Wij kunnen vanuit rust in beweging komen door ons af te zetten. Wij oefenen een kracht op de grond uit waarbij deze laatste op zijn beurt een even grote en tegengestelde kracht op ons uitoefent. Zo krijgen wij een versnelling. 
 
 \end{example}
 
-\begin{example}
+\begin{example}[Hoe stuwt een raket zich voort?]\nl
 	Een vliegtuig met straalmotoren of een raket doen hetzelfde. Door het uitoefenen van een kracht op de naar achter uitgeworpen gassen, oefenen de uitgeworpen gassen een kracht uit op het vliegtuig of de raket. Maar dan voorwaarts. (Een vliegtuig of raket duwt zich dus niet af tegen de (eventuele) lucht.)
 \end{example}
 
+\begin{exercise}
+	Een grote magneet oefent op een ijzeren spijkertje een kracht uit. Welke van de volgende uitspraken is dan juist?
+	\begin{enumerate}
+		\item Het spijkertje zelf oefent op de magneet geen kracht uit.
+		\item De kracht die het spijkertje op de magneet uitoefent is veel kleiner dan deze door de magneet op het spijkertje uitgeoefend.
+		\item De kracht die het spijkertje op de magneet uitoefent is even groot als deze door de magneet op het spijkertje uitgeoefend.
+		\item Over de grootte van de kracht die het spijkertje op de magneet uitoefent, kan niets met zekerheid gezegd worden.
+	\end{enumerate}
+	\begin{oplossing}
+		$\answer[onlineshowanswerbutton]{(c)}$
+	\end{oplossing}
+\end{exercise}
 
+\begin{exercise}
+	Twee ploegen zijn aan het touwtrekken. Volgens het derde beginsel van Newton oefenen de twee ploegen steeds even grote maar tegengestelde krachten op elkaar uit. Hoe is het dan mogelijk dat er toch een winnende ploeg is?
+	\begin{oplossing}
+		\dots
+	\end{oplossing}
+\end{exercise}
+
+\begin{exercise}
+	Een eekhoorntje glijdt over een gladde tafel met een heleboel nootjes tussen zijn voorpoten. Wat zou het moeten doen om te verhinderen dat het van de tafel valt? Leg uit.
+	
+	\begin{oplossing}
+		\dots
+	\end{oplossing}
+\end{exercise}
 
 \end{document}
 
+% Te verwerken?
 
 
+% Om over na te denken: hoe kan een star lichaam een kracht uitoefenen?
 
+% \begin{remark}\nl
+% 	tegengesteld
+% \end{remark}
 
-% Een ander voorbeeld waarin lichamen krachten op mekaar uitoefenen is zo'n decoratief speeltje waar opgehangen metalen bolletjes op een fascinerende manier al botsend heen en weer slingeren. Een bolletje dat met een snelheid aangeslingerd komt, wordt tot stilstand gebracht terwijl een ander bolletje vanuit stilstand tot dezelfde snelheid wordt gelanceerd. Omdat de massa's van de kogeltjes even groot zijn en de versnelling van de ene even groot is als de vertraging van de andere, moeten de kogeltjes op elkaar even grote krachten uitoefenen.
+% \begin{remark}\nl
+% 	op elk moment, zonder vertraging
+% \end{remark}
