--- a/6dejaar/dynamica/nwtn_derde_beginsel.tex
+++ b/6dejaar/dynamica/nwtn_derde_beginsel.tex
@@ -24,6 +24,7 @@ Krachten komen niet uit het niets, ze worden altijd door een ander voorwerp uitg
 De derde bewegingswet van Newton -- ook wel de wet van actie en reactie genoemd -- geeft de relatie tussen de krachten die lichamen onderling op elkaar uitoefenen.
 
 \begin{definition}[De wet van actie en reactie]\nl
+
 Wanneer lichaam A op lichaam B een kracht uitoefent, oefent lichaam B op lichaam A een even grote maar tegengestelde kracht uit. In symbolen:
 \begin{equation*}
 	\vec{F}_{a,b}=-\vec{F}_{b,a}
@@ -62,15 +63,16 @@ Met deze derde wet kunnen we verschillende verschijnselen verklaren. Hier volgen
 
 \begin{exercise}
 	Een grote magneet oefent op een ijzeren spijkertje een kracht uit. Welke van de volgende uitspraken is dan juist?
-	\begin{enumerate}
-		\item Het spijkertje zelf oefent op de magneet geen kracht uit.
-		\item De kracht die het spijkertje op de magneet uitoefent is veel kleiner dan deze door de magneet op het spijkertje uitgeoefend.
-		\item De kracht die het spijkertje op de magneet uitoefent is even groot als deze door de magneet op het spijkertje uitgeoefend.
-		\item Over de grootte van de kracht die het spijkertje op de magneet uitoefent, kan niets met zekerheid gezegd worden.
-	\end{enumerate}
-	\begin{oplossing}
-		$\answer[onlineshowanswerbutton]{(c)}$
-	\end{oplossing}
+	\begin{multipleChoice}
+		\choice{Het spijkertje zelf oefent op de magneet geen kracht uit.}
+		\choice{De kracht die het spijkertje op de magneet uitoefent is veel kleiner dan deze door de magneet op het spijkertje uitgeoefend.}
+		\choice[correct]{De kracht die het spijkertje op de magneet uitoefent is even groot als deze door de magneet op het spijkertje uitgeoefend.}
+		\choice{Over de grootte van de kracht die het spijkertje op de magneet uitoefent, kan niets met zekerheid gezegd worden.}
+	\end{multipleChoice}
+	% \begin{oplossing}
+	% 	c
+	% 	% $\answer[onlineshowanswerbutton]{(c)}$
+	% \end{oplossing}
 \end{exercise}
 
 \begin{exercise}
