--- a/semester1.tex
+++ b/semester1.tex
@@ -17,91 +17,91 @@
 
     
 
-% \part{Inleiding}
+\part{Inleiding}
 
-% \activitychapter{6dejaar/inleiding.tex}
+\activitychapter{6dejaar/inleiding.tex}
 
-% \part{Vectoren}
+\part{Vectoren}
 
-% \activitychapter{6dejaar/vectoren/vct_inleiding.tex}
-% \activitychapter{6dejaar/vectoren/vct_begrip.tex}
-% \activitychapter{6dejaar/vectoren/vct_bewerkingen.tex}
-% \activitychapter{6dejaar/vectoren/vct_oef.tex}
-
-
-
-% \part{Basisbegrippen van de kinematica}
-
-% \activitychapter{6dejaar/kinematica/knmtc_bgrppn_intro.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_bgrppn_positie.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_bgrppn_snelheid.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_bgrppn_versnelling.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_bgrppn_oef.tex}
-
-
-% \part{Eendimensionale bewegingen}
-
-% \activitychapter{6dejaar/kinematica/knmtc_1dim_intro.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_1dim_begrippen.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_1dim_ERB.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_1dim_EVRB_rechtstreeks.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_1dim_oplossingsstrategie.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_1dim_verticale_worp.tex}
+\activitychapter{6dejaar/vectoren/vct_inleiding.tex}
+\activitychapter{6dejaar/vectoren/vct_begrip.tex}
+\activitychapter{6dejaar/vectoren/vct_bewerkingen.tex}
+\activitychapter{6dejaar/vectoren/vct_oef.tex}
 
 
 
-% \part{Tweedimensionale bewegingen}
+\part{Basisbegrippen van de kinematica}
+
+\activitychapter{6dejaar/kinematica/knmtc_bgrppn_intro.tex}
+\activitychapter{6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex}
+\activitychapter{6dejaar/kinematica/knmtc_bgrppn_positie.tex}
+\activitychapter{6dejaar/kinematica/knmtc_bgrppn_snelheid.tex}
+\activitychapter{6dejaar/kinematica/knmtc_bgrppn_versnelling.tex}
+\activitychapter{6dejaar/kinematica/knmtc_bgrppn_oef.tex}
 
 
-% \activitychapter{6dejaar/kinematica/knmtc_2dim_intro.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_2dim_begrippen.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_2dim_eenparige_cirkelbeweging.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex}
+\part{Eendimensionale bewegingen}
+
+\activitychapter{6dejaar/kinematica/knmtc_1dim_intro.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_begrippen.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_ERB.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_EVRB_rechtstreeks.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_oplossingsstrategie.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_verticale_worp.tex}
+
+
+
+\part{Tweedimensionale bewegingen}
+
+
+\activitychapter{6dejaar/kinematica/knmtc_2dim_intro.tex}
+\activitychapter{6dejaar/kinematica/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
+\activitychapter{6dejaar/kinematica/knmtc_2dim_begrippen.tex}
+\activitychapter{6dejaar/kinematica/knmtc_2dim_eenparige_cirkelbeweging.tex}
+\activitychapter{6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex}
 
 
 \part{De beginselen van Newton}
 
-% \activitychapter{6dejaar/dynamica/nwtn_intro.tex}
-% \activitychapter{6dejaar/dynamica/nwtn_traagheid.tex}
-% \activitychapter{6dejaar/dynamica/nwtn_tweede_beginsel.tex}
+\activitychapter{6dejaar/dynamica/nwtn_intro.tex}
+\activitychapter{6dejaar/dynamica/nwtn_traagheid.tex}
+\activitychapter{6dejaar/dynamica/nwtn_tweede_beginsel.tex}
 \activitychapter{6dejaar/dynamica/nwtn_derde_beginsel.tex}
-% \activitychapter{6dejaar/dynamica/nwtn_oef.tex}
-% % \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
-% % \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
+\activitychapter{6dejaar/dynamica/nwtn_oef.tex}
+% \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
+% \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
 
-% \part{Toepassing wetten van Newton}
+\part{Toepassing wetten van Newton}
 
-% \activitychapter{6dejaar/dynamica/nwtn_toep_intro.tex}
-% \activitychapter{6dejaar/dynamica/nwtn_toep_algemeen.tex}
-% \activitychapter{6dejaar/dynamica/nwtn_toep_krachten.tex}
-% \activitychapter{6dejaar/dynamica/nwtn_toep_dynamica_ECB.tex}
-
-
+\activitychapter{6dejaar/dynamica/nwtn_toep_intro.tex}
+\activitychapter{6dejaar/dynamica/nwtn_toep_algemeen.tex}
+\activitychapter{6dejaar/dynamica/nwtn_toep_krachten.tex}
+\activitychapter{6dejaar/dynamica/nwtn_toep_dynamica_ECB.tex}
 
 
-% % \part{De gravitatiekracht}
 
-% % \activitychapter{6dejaar/grvt_kepler.tex}
-% % \activitychapter{6dejaar/grvt_universele_gravitatiekracht.tex}
-% % \activitychapter{6dejaar/grvt_satellietbanen.tex}
-% % \activitychapter{6dejaar/grvt_gewicht.tex}
-% % \activitychapter{6dejaar/grvt_zwaartekracht.tex}
 
-% % \part{Arbeid en Energie}
+% \part{De gravitatiekracht}
 
-% % \activitychapter{6dejaar/ae_intro.tex}
-% % \activitychapter{6dejaar/ae_constante_kracht.tex}
-% % \activitychapter{6dejaar/ae_niet_constante_kracht.tex}
-% % \activitychapter{6dejaar/ae_theorema.tex}
-% % \activitychapter{6dejaar/ae_pot_elastische.tex}
-% % \activitychapter{6dejaar/ae_pot_gravitationele.tex}
-% % \activitychapter{6dejaar/ae_pot_gravitationele_algemeen.tex}
-% % \activitychapter{6dejaar/ae_pot_referentiepunt.tex}
-% % \activitychapter{6dejaar/ae_pot_potentiele_energie.tex}
-% % \activitychapter{6dejaar/ae_behoud.tex}
+% \activitychapter{6dejaar/grvt_kepler.tex}
+% \activitychapter{6dejaar/grvt_universele_gravitatiekracht.tex}
+% \activitychapter{6dejaar/grvt_satellietbanen.tex}
+% \activitychapter{6dejaar/grvt_gewicht.tex}
+% \activitychapter{6dejaar/grvt_zwaartekracht.tex}
+
+% \part{Arbeid en Energie}
+
+% \activitychapter{6dejaar/ae_intro.tex}
+% \activitychapter{6dejaar/ae_constante_kracht.tex}
+% \activitychapter{6dejaar/ae_niet_constante_kracht.tex}
+% \activitychapter{6dejaar/ae_theorema.tex}
+% \activitychapter{6dejaar/ae_pot_elastische.tex}
+% \activitychapter{6dejaar/ae_pot_gravitationele.tex}
+% \activitychapter{6dejaar/ae_pot_gravitationele_algemeen.tex}
+% \activitychapter{6dejaar/ae_pot_referentiepunt.tex}
+% \activitychapter{6dejaar/ae_pot_potentiele_energie.tex}
+% \activitychapter{6dejaar/ae_behoud.tex}
 
 
 
